fix: enforce correct tuple model types for UI partials

--- a/RentalPropertyAnalyzer/Views/Shared/_ViewImports.cshtml
+++ b/RentalPropertyAnalyzer/Views/Shared/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using RentalPropertyAnalyzer
+@using RentalPropertyAnalyzer.Helpers
 @using RentalPropertyAnalyzer.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
